# newsapi

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/instantsystemtest/page/: BasePage.kt  HomePage.kt  NewsPage.kt
app/src/androidTest/java/com/example/instantsystemtest/test/: MainTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/instantsystemtest/: App.kt  MainActivity.kt
app/src/main/java/com/example/instantsystemtest/di/: DispatchersModule.kt  FeaturesModule.kt
app/src/main/java/com/example/instantsystemtest/ui/theme/: Palette.kt  Typography.kt
app/src/main/java/com/example/instantsystemtest/utils/: KDispatchers.kt  KDispatchersImpl.kt
app/src/main/java/com/example/instantsystemtest/viewmodel/: BaseViewModel.kt  HomeViewModel.kt  NewsViewModel.kt
app/src/main/java/com/example/instantsystemtest/views/: FullScreenCircularProgressBar.kt  MainActivityScreen.kt
app/src/main/java/com/example/instantsystemtest/views/navigation/: NavHostScreen.kt
app/src/main/java/com/example/instantsystemtest/views/news/: ErrorRetrievingNewsScreen.kt  HomeScreen.kt  NewsCardComponent.kt  NewsScreen.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-fr-rFR/: strings.xml
app/src/test/java/com/example/instantsystemtest/viewmodel/: HomeViewModelTest.kt  KTestDispatchers.kt  NewsViewModelTest.kt
business/: build.gradle
business/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
ndk-libs/: CMakeLists.txt
(+18 files in other folders)
